--- a/springboot_todo_list-main/springboot_todo_list-main/src/main/resources/templates/register.html
+++ b/springboot_todo_list-main/springboot_todo_list-main/src/main/resources/templates/register.html
@@ -11,8 +11,8 @@
 
         <input type="text" th:field="*{username}" placeholder="Username" required />
         <input type="email" th:field="*{email}" placeholder="Email" required />
+        <input type="password" th:field="*{password}" placeholder="Password" required />
         <button type="submit">Register</button>
-
         <div class="message" th:text="${message}"></div>
     </form>
 </body>
